--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,75 @@
-.App {
-  text-align: center;
+.App{
+    display: flex;
+    height: 100vh;
+    background-color: #070757;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.questions{
+    flex: 4;
+    background: linear-gradient(to bottom, rgba(0,0,0,0), #070763), url("assets/bacg.jpeg");
+    background-size: 100% 100%;
+    background-repeat: no-repeat;
+    display: flex;
+    flex-direction: column;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.top{
+    height: 50%;
+    color: white;
+    /* background-color: wheat; */
+    position: relative;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.timer{
+    height: 50px;
+    width: 50px;
+    border: 3px solid white;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 20px;
+    font-weight: bold;
+    position: absolute;
+    bottom: 40px;
+    left: 80px;
+    background-color: #131374;
 }
-
-.App-link {
-  color: #61dafb;
+.bottom{
+    height: 50%;
+    /* background-color: aliceblue; */
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.gameStop{
+    height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 40px;
+    color: white;
+}
+.money{
+    flex: 1;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    color: wheat;
+}
+.moneyList{
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+}
+.moneylistitem{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    list-style: none;
+    font-size: 20px;
+    padding: 5px 0px;
+    width: 90%;
+    border-radius: 10px;
+}
+.moneylistitem.active{
+    background-color: rgb(43, 176, 228);
 }
